--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -934,3 +934,11 @@ table.list th.easy-query-additional-ending-buttons .ending-buttons-fixed .toggle
 table.list th.easy-additional-ending-buttons .ending-buttons-fixed .toggle-favorite:hover:before {
     background: @primary-dark-bg !important;
 }
+
+/**
+ * Filtry (z menu nad moduly)
+ */
+#filters {
+    background-color: @primary-light-bg;
+    margin: 0;
+}
