feat: filtry/nastavení

--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -938,7 +938,8 @@ table.list th.easy-additional-ending-buttons .ending-buttons-fixed .toggle-favor
 /**
  * Filtry (z menu nad moduly)
  */
-#filters {
+#filters,
+#filters_settings {
     background-color: @primary-light-bg;
     margin: 0;
 }
