--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -503,22 +503,14 @@ hr {
  */
 
 // queries nahoře - (kanban, úkoly, ...)
-#search-results-counts li a,
-#user-query-automatic-filter a,
 .entity-array > a,
-.entity-array > span,
-.multigrouping .multigroup_element,
-.saved-queries a,
-.tags a,
-.version-list a {
+.entity-array > span {
     color: @text-tw;
 }
 
-// filry vpravo
+// filtry vpravo atd.
 #search-results-counts li a,
 #user-query-automatic-filter a,
-.entity-array > a,
-.entity-array > span,
 .multigrouping .multigroup_element,
 .saved-queries a,
 .tags a,
