feat: schování toolbaru s tlačítkem "zobrazit vše" pod moduly

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -54,6 +54,14 @@ table:not(#projects_table) [class*="idnt-"] th.subject {
 }
 
 /**
+ * Toolbar pod modulem
+ */
+// Zobrazuje "Zobrazit vše" - schovat
+.module-content .toolbar {
+    display: none;
+}
+
+/**
  * Gridy jako takové
  */
 table thead tr:first-child th {
@@ -394,3 +402,4 @@ div.easy-attendance-calendar-item > a {
     // aplikujeme jen na položky s ikonama
     padding-left: 1.6rem !important;
 }
+
