feat: redesign filtrů a tlačítek na pravém sidebaru

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -403,3 +403,31 @@ div.easy-attendance-calendar-item > a {
     padding-left: 1.6rem !important;
 }
 
+/**
+ * Sidebar a filtry + uživatelé
+ */
+
+// Repozicování headerů
+#sidebar {
+    .box .module-heading {
+        padding-right: 1.5rem;
+    }
+
+    .box .expander.module-toggler {
+        right: 0.5rem;
+    }
+}
+
+// Tlačítka na plnou šířku
+#sidebar_content {
+    // Celý blok odsadíme
+    .module-content {
+        padding-right: 1.6rem;
+    }
+
+    #user-query-automatic-filter a,
+    .saved-queries a {
+        float: none;
+        width: 100%;
+    }
+}
