--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -601,6 +601,8 @@ input[type="submit"]:hover {
  */
 
 // Gradient pryč
+#sidebar_content:before,
+#easy_grid_sidebar_content:before,
 #easy_grid_sidebar_content::after,
 #easy_grid_sidebar_footer::after,
 #sidebar_content::after,
