fix: barva buttonu u filtrů

--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -508,6 +508,12 @@ hr {
     color: @text-tw;
 }
 
+// fix pro buttonky filtrů
+.entity-array > span {
+    background-color: @bg-tw-light;
+    border-color: @border-color;
+}
+
 // filtry vpravo atd.
 #search-results-counts li a,
 #user-query-automatic-filter a,
