feat: dark theme v editaci stránek/widgetů

--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -943,3 +943,29 @@ table.list th.easy-additional-ending-buttons .ending-buttons-fixed .toggle-favor
     background-color: @primary-light-bg;
     margin: 0;
 }
+
+/**
+ * Okna nastaveí v administraci obsahu (např. editace )
+ */
+ .easy-entity-cards-container,
+ .form-box,
+ #filters,
+ #filters_settings,
+ #custom_formatting,
+ #modal_selectorfilters,
+ #modal_selectorcustom_formatting,
+ #modal_selectorfilters_settings,
+ .easy-query-type-settings-container>div,
+ .easy-page-module-form,
+ #new_dmsf_workflow,
+ #edit_dmsf_workflow
+ {
+    background-color: @primary-dark-bg;
+ }
+
+ /**
+  * Projektový backlog - scrum/kanbal
+  */
+.sticky_agile_backlog_autocomplete_wrap {
+    background-color: @primary-bg;
+}
