feat: scroll modal - base dark theme

--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -970,3 +970,28 @@ table.list th.easy-additional-ending-buttons .ending-buttons-fixed .toggle-favor
 .sticky_agile_backlog_autocomplete_wrap {
     background-color: @primary-bg;
 }
+
+/**
+ * Scroll modal
+ */
+.vue-modal__container {
+    background-color: @primary-dark-bg;
+}
+
+.vue-modal__sidebar-button {
+    background: @primary-light-bg !important;
+}
+
+.vue-modal__sidebar-button:hover {
+    background: @bg-tw !important;
+}
+
+.vue-modal__main {
+    background: @primary-bg;
+}
+.vue-modal__overview,
+.vue-modal__attributes,
+.cf_buttonPanel {
+    background: @primary-light-bg !important;
+    border-bottom-color: @border-color;
+}
