feat: dark theme našeptávače v editoru

--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -995,3 +995,24 @@ table.list th.easy-additional-ending-buttons .ending-buttons-fixed .toggle-favor
     background: @primary-light-bg !important;
     border-bottom-color: @border-color;
 }
+
+/**
+ * Našeptávač (jmen) v editoru
+ */
+.cke_autocomplete_panel,
+#cke_autocomplete_panel {
+    border-color: @border-color !important;
+    background: @primary-dark-bg !important;
+}
+
+.cke_autocomplete_panel > li,
+#cke_autocomplete_panel > li  {
+    background: @primary-dark-bg !important;
+}
+
+.cke_autocomplete_panel > li:hover,
+.cke_autocomplete_panel > li .cke_autocomplete_selected,
+#cke_autocomplete_panel > li:hover,
+#cke_autocomplete_panel > li .cke_autocomplete_selected {
+    background: @primary-bg !important;
+}
