feat: popup plánovač dark theme

--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -1010,3 +1010,47 @@ table.list th.easy-additional-ending-buttons .ending-buttons-fixed .toggle-favor
 #cke_autocomplete_panel > li .cke_autocomplete_selected {
     background: @primary-bg !important;
 }
+
+/**
+ * Popup kalendář a plánovač schůzek
+ */
+// #f9f9f9 - #10171e
+#top__tools .easy-calendar-upcoming__calendar-content {
+    background: @primary-dark-bg;
+}
+
+#top__tools .easy-calendar-upcoming__calendar-trigger.w-toggleable__trigger--active:before {
+    background: @primary-dark-bg;
+}
+
+#top__tools .easy-calendar-upcoming__calendar-trigger.w-toggleable__trigger--active:after {
+    background: @primary-dark-bg;
+}
+
+#top__tools .easy-calendar-upcoming__calendar-content .fc-content {
+    background: @primary-light-bg;
+}
+
+#top__tools .easy-calendar-upcoming__calendar-content.w-toggleable__content--active {
+    color: @text-tw;
+}
+
+.fc-state-highlight {
+    background: @bg-tw-blue !important;
+}
+
+div.easy-calendar-fc .fc-widget-header {
+    border-color: @border-color !important;
+}
+
+.fc-agenda-divider-inner {
+    background: @primary-dark-bg !important;
+}
+
+div.easy-calendar-fc td, div.easy-calendar-fc th {
+    border-color: @border-color !important;
+}
+
+div.easy-calendar table tbody th, div.easy-calendar-fc table tbody th {
+    background: @primary-light-bg;
+}
