fix: button text color change

--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -546,7 +546,7 @@ hr {
 input[type="submit"] {
     background: @primary-light-bg;
     border-color: @border-color;
-    color: @text-tw-dark;
+    color: @text-tw-dark !important;
 }
 
 /**
