fix: single color override in task detail

--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -476,6 +476,11 @@ hr {
     background: @primary-dark-bg;
 }
 
+.easy-entity-details-description,
+.easy-entity-details-description * {
+    color: @text-tw !important;
+}
+
 .attribute > div.label,
 .attribute > div.value {
     color: @text-tw !important;
