fix: normalizovaná barva textu v detailu úkolu

--- a/src/less/theme-dark.less
+++ b/src/less/theme-dark.less
@@ -472,13 +472,11 @@ hr {
     border-bottom: none;
 }
 
-.easy-entity-details-description {
-    background: @primary-dark-bg;
-}
-
 .easy-entity-details-description,
-.easy-entity-details-description * {
+.easy-entity-details-description *,
+.journal-details-container .wiki * {
     color: @text-tw !important;
+    background-color: @primary-dark-bg !important;
 }
 
 .attribute > div.label,
